<resources>
    <string name="app_name">ProfileApp</string>
    <string name="loading_profiles">Doing something great</string>
    <string name="name">name: </string>
    <string name="age">age: </string>
    <string name="gender">gender: </string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="submit">submit</string>
</resources>
