<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProfileActivity">

    <EditText
        android:id="@+id/profile_form_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_form_age_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        app:layout_constraintTop_toBottomOf="@id/profile_form_name_field" />

    <RadioGroup
        android:id="@+id/profile_form_gender_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/profile_form_age_field">

        <RadioButton
            android:id="@+id/gender_radio_male"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:onClick="onGenderButtonClicked"/>

        <RadioButton
            android:id="@+id/gender_radio_female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:onClick="onGenderButtonClicked" />

        <RadioButton
            android:id="@+id/gender_radio_other"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:onClick="onGenderButtonClicked" />
    </RadioGroup>

    <Button
        android:id="@+id/profile_form_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_form_gender_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/submit"
        android:background="#266d2e"
        android:textColor="#FFFF"
        android:onClick="submitProfile"/>

</android.support.constraint.ConstraintLayout>