<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".DetailProfileActivity">

    <ImageView
        android:id="@+id/detail_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/detail_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/name"
            android:textAlignment="textEnd"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/detail_image_view" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_name_layout">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/age"
            android:textAlignment="textEnd"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/detail_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/detail_name_layout" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_gender_layour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_age_layout">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/gender"
            android:textAlignment="textEnd"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/detail_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/detail_age_layout" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>